--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
     <head>
-
+        <title>Narua</title>
+        <!--link rel="icon" href="favicon.ico" type="image/x-icon" /-->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Test</h1>
-        <h1>Test2</h1>
+        <script src="app.js"></script>
+        <div id="fullscreen" class="fullscreen mainContainer">
+            <img class="center animated fadeout" src="images/Produktbilder2.webp" width="192" height="192">
+        </div>
     </body>
 </html>
