try splash with image

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
     <head>
         <title>Narua</title>
-        <!--link rel="icon" href="favicon.ico" type="image/x-icon" /-->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script src="app.js"></script>
-        <div id="fullscreen" class="fullscreen mainContainer">
-            <img class="center animated fadeout" src="images/Produktbilder2.webp" width="192" height="192">
+        <div id="splashContainer" class="splashContainer">
+            <div id="splashContent" class="center fade-in">
+                <img src="images/Narua_Logo.png">
+            </div>
         </div>
+        <div id="mainContentContainer"">
+            <div id="mainContent">
+                <h1>Main content NARUA E B S</h1>
+            </div>
+        </div>
+        <script src="app.js"></script>
     </body>
 </html>
