add cname file and add images

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
         <title>Narua</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="images/favicon.png" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="splashContainer" class="splashContainer">
             <div id="splashContent" class="center fade-in">
-                <img src="images/Narua_Logo.png">
+                <img src="images/logo_white_on_black_tiny.png" width="360" height="270">
             </div>
         </div>
         <div id="mainContentContainer"">
             <div id="mainContent">
-                <h1>Main content NARUA E B S</h1>
+                <img src="images/logo_white_on_black_tiny.png" width="360" height="270">
             </div>
         </div>
         <script src="app.js"></script>
