--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="splashContainer" class="splashContainer">
-            <div id="splashContent" class="center fade-in">
+        <div id="splash-container" class="splash-container">
+            <div id="splash-content" class="center fade-in">
                 <img src="images/logo_white_on_black_tiny.png" width="360" height="270">
             </div>
         </div>
-        <div id="mainContentContainer"">
-            <div id="mainContent">
-                <img src="images/logo_white_on_black_tiny.png" width="360" height="270">
+        <div id="header-container">
+            <div id="header-content">
+                <img src="images/logo_white_on_black_tiny.png" width="120" height="90">
             </div>
         </div>
         <script src="app.js"></script>
