add impressum to not get fucked

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
         <title>Narua</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="splash-container" class="splash-container">
-            <div id="splash-content" class="center fade-in">
-                <img src="images/logo_white_on_black_tiny.png" width="360" height="270">
-            </div>
-        </div>
-        <div id="header-container">
-            <div id="header-content">
-                <img src="images/logo_white_on_black_tiny.png" width="120" height="90">
+            <div id="splash-content" class="center full-height fade-in">
+                <img src="images/logo/logo_white_on_black_tiny.png" width="360" height="270">
             </div>
         </div>
         <script src="app.js"></script>
+        <div id="footer" class="center">
+            <div>
+                <a href="impressum.html">Impressum</a>
+            </div>
+        </div>
     </body>
 </html>
