change font of impressum

--- a/impressum.html
+++ b/impressum.html
@@ -9,25 +9,25 @@
     <body>
         <div id="impressum" class="impressum">
             <div class="information">
-                <p class="header white-font">Impressum der Grajczyk & Meyer GbR</p>
+                <p class="header white-normal-font">Impressum der Grajczyk & Meyer GbR</p>
             </div>
             <div class="information">
-                <p class="header white-font">Anschrift</p>
-                <p class="text white-font">
+                <p class="header white-normal-font">Anschrift</p>
+                <p class="text white-normal-font">
                     Mühlenstraße 114 <br> 
                     26789 Leer <br>
                     Deutschland
                 </p>
             </div>
             <div class="information">
-                <p class="header white-font">Email</p>
-                <p class="text white-font">
+                <p class="header white-normal-font">Email</p>
+                <p class="text white-normal-font">
                     <a href="mailto: contact@narua.de">contact@narua.de</a>
                 </p>
             </div>
             <div class="information">
-                <p class="header white-font">Online-Streitbeilegung</p>
-                <p class="text white-font">
+                <p class="header white-normal-font">Online-Streitbeilegung</p>
+                <p class="text white-normal-font">
                     Online-Streitbeilegung gemäß Art. 14 Abs. 1 ODR-VO: <br>
                     Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, <br> 
                     die Sie unter <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a> finden. <br>
