--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
             </div>
         </div>
         <script src="app.js"></script>
-        <div id="footer" class="center">
-            <div>
-                <a href="impressum.html">Impressum</a>
+        <div id="main-content">
+            <div id="header">
+                <div id="header-logo">
+                    <img src="images/logo/logo_white_on_black_tiny.png" width="120" height="90">
+                </div>
             </div>
-        </div>
+            <div id="content">
+                
+            </div>
+            <div id="footer">
+                <div>
+                    <a class="white-logo-font" href="impressum.html">Impressum</a>
+                </div>
+            </div>
+        </div>    
     </body>
 </html>
