--- a/impressum.html
+++ b/impressum.html
@@ -9,24 +9,31 @@
     <body>
         <div id="impressum" class="impressum">
             <div class="information">
-                <p class="header white-normal-font">Impressum der Grajczyk & Meyer GbR</p>
-            </div>
-            <div class="information">
-                <p class="header white-normal-font">Anschrift</p>
+                <p class="header white-bold-font">Grajczyk & Meyer GbR</p>
+                <p class="text white-normal-font">
+                    Jannis Grajczyk <br>
+                    Tobias Meyer
+                </p>
                 <p class="text white-normal-font">
                     Mühlenstraße 114 <br> 
                     26789 Leer <br>
-                    Deutschland
+                    Email:  <a href="mailto: contact@grajczyk-meyer.de">contact@grajczyk-meyer.de</a><br>
+                    Tel.: 0151-20067570 <br>
+                    Umsatzsteuer-Identifikationsnummer <br> 
+                    gemäß $27a UStG: DE366235764
                 </p>
             </div>
             <div class="information">
-                <p class="header white-normal-font">Email</p>
+                <p class="header white-bold-font">Inhaltlich verantwortlich gemäß $55 Abs. 2 RStV:</p>
                 <p class="text white-normal-font">
-                    <a href="mailto: contact@narua.de">contact@narua.de</a>
+                    Jannis Grajczyk; Tobias Meyer<br>
+                    Grajczyk & Meyer GbR <br>
+                    Mühlenstraße 114 <br> 
+                    26789 Leer <br>
                 </p>
             </div>
             <div class="information">
-                <p class="header white-normal-font">Online-Streitbeilegung</p>
+                <p class="header white-bold-font">Online-Streitbeilegung</p>
                 <p class="text white-normal-font">
                     Online-Streitbeilegung gemäß Art. 14 Abs. 1 ODR-VO: <br>
                     Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, <br> 
