fix impressum § instead of $

--- a/impressum.html
+++ b/impressum.html
@@ -24,7 +24,7 @@
                 </p>
             </div>
             <div class="information">
-                <p class="header white-bold-font">Inhaltlich verantwortlich gemäß $55 Abs. 2 RStV:</p>
+                <p class="header white-bold-font">Inhaltlich verantwortlich gemäß §55 Abs. 2 RStV:</p>
                 <p class="text white-normal-font">
                     Jannis Grajczyk; Tobias Meyer<br>
                     Grajczyk & Meyer GbR <br>
