--- a/impressum.html
+++ b/impressum.html
@@ -20,7 +20,7 @@
                     Email:  <a href="mailto: contact@grajczyk-meyer.de">contact@grajczyk-meyer.de</a><br>
                     Tel.: 0151-20067570 <br>
                     Umsatzsteuer-Identifikationsnummer <br> 
-                    gemäß $27a UStG: DE366235764
+                    gemäß §27a UStG: DE366235764
                 </p>
             </div>
             <div class="information">
