add product image

--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <html>
-    <head>
-        <title>Narua</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="splash-container" class="splash-container">
-            <div id="splash-content" class="center full-height fade-in">
-                <img src="images/logo/logo_white_on_black_tiny.png" width="360" height="270">
+
+<head>
+    <title>Narua</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div id="splash-container" class="splash-container">
+        <div id="splash-content" class="center full-height fade-in">
+            <img src="images/logo/logo_white_on_black_tiny.png" width="360" height="270">
+        </div>
+    </div>
+    <script src="app.js"></script>
+    <div id="main-content">
+        <div id="header">
+            <div id="header-logo">
+                <img src="images/logo/logo_white_on_black_tiny.png" width="120" height="90">
             </div>
         </div>
-        <script src="app.js"></script>
-        <div id="main-content">
-            <div id="header">
-                <div id="header-logo">
-                    <img src="images/logo/logo_white_on_black_tiny.png" width="120" height="90">
-                </div>
+        <div id="content">
+            <img class="main-image" src="images/Produktbilder.jpg">
+        </div>
+        <div id="footer">
+            <div>
+                <a class="white-logo-font" href="impressum.html">Impressum</a>
             </div>
-            <div id="content">
-                
-            </div>
-            <div id="footer">
-                <div>
-                    <a class="white-logo-font" href="impressum.html">Impressum</a>
-                </div>
-            </div>
-        </div>    
-    </body>
+        </div>
+    </div>
+</body>
+
 </html>
