add pulse effect

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="splash-container" class="splash-container">
         <div id="splash-content" class="center full-height fade-in">
-            <img src="images/logo/logo_white_on_black_tiny.png" width="360" height="270">
+            <img class="pulse" src="images/logo/logo_white_on_black_tiny.png" width="324" height="243">
         </div>
     </div>
     <script src="app.js"></script>
