improve design of impressum

--- a/impressum.html
+++ b/impressum.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <div id="impressum" class="impressum">
+            <div class="impressum-header white-bold-font">Impressum</div>
             <div class="information">
-                <p class="header white-bold-font">Grajczyk & Meyer GbR</p>
+                <p class="information-header white-bold-font">Grajczyk & Meyer GbR</p>
                 <p class="text white-normal-font">
                     Jannis Grajczyk <br>
                     Tobias Meyer
@@ -24,7 +25,7 @@
                 </p>
             </div>
             <div class="information">
-                <p class="header white-bold-font">Inhaltlich verantwortlich gemäß §55 Abs. 2 RStV:</p>
+                <p class="information-header white-bold-font">Inhaltlich verantwortlich gemäß §55 Abs. 2 RStV:</p>
                 <p class="text white-normal-font">
                     Jannis Grajczyk; Tobias Meyer<br>
                     Grajczyk & Meyer GbR <br>
@@ -33,13 +34,15 @@
                 </p>
             </div>
             <div class="information">
-                <p class="header white-bold-font">Online-Streitbeilegung</p>
+                <p class="information-header white-bold-font">Online-Streitbeilegung</p>
                 <p class="text white-normal-font">
                     Online-Streitbeilegung gemäß Art. 14 Abs. 1 ODR-VO: <br>
                     Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, <br> 
                     die Sie unter <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a> finden. <br>
-                    Wir sind zur Beilegung von Streitigkeiten mit Verbrauchern verpflichtet. Verbraucher können sich hierzu an die folgende Verbraucherschlichtungsstelle wenden: <br>
-                    Allgemeine Verbraucherschlichtungsstelle des Zentrums für Schlichtung e.V., Straßburger Str.8, 77694 Kehl, www.verbraucher-schlichter.d
+                    Wir sind zur Beilegung von Streitigkeiten mit Verbrauchern verpflichtet. 
+                    Verbraucher können sich hierzu an die folgende Verbraucherschlichtungsstelle wenden: <br>
+                    Allgemeine Verbraucherschlichtungsstelle des Zentrums für Schlichtung e.V., 
+                    Straßburger Str.8, 77694 Kehl, <a href=" www.verbraucher-schlichter.de">www.verbraucher-schlichter.de</a>
                 </p>
             </div>
         </div>
