--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <script src="app.js"></script>
     <div id="main-content">
         <div id="header">
-            <div id="header-logo">
-                <img src="images/logo/logo_white_on_black_tiny.png" width="120" height="90">
-            </div>
+            <img id="header-logo" src="images/logo/logo_white_on_black_cropped.png">
         </div>
         <div id="content">
             <img class="main-image" src="images/Produktbilder.jpg">
@@ -31,5 +29,4 @@
         </div>
     </div>
 </body>
-
 </html>
