--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div id="splash-container" class="splash-container">
         <div id="splash-content" class="center full-height fade-in">
-            <img class="pulse" src="images/logo/logo_white_on_black_tiny.png" width="324" height="243">
+            <img class="splash-image pulse" src="images/logo/logo_white_on_black_cropped_compressed.png"> <!--width="324" height="243"-->
         </div>
     </div>
     <script src="app.js"></script>
     <div id="main-content">
         <div id="header">
-            <img id="header-logo" src="images/logo/logo_white_on_black_cropped.png">
+            <img id="header-logo" src="images/logo/logo_white_on_black_cropped_compressed.png">
         </div>
         <div id="content">
             <img class="main-image" src="images/Produktbilder.jpg">
