verify for pinterest

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Narua</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="p:domain_verify" content="fd6cc231a0c2ff0a21f16c2ff68968f8" />
     <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +12,8 @@
 <body>
     <div id="splash-container" class="splash-container">
         <div id="splash-content" class="center full-height fade-in">
-            <img class="splash-image pulse" src="images/logo/logo_white_on_black_cropped_compressed.png"> <!--width="324" height="243"-->
+            <img class="splash-image pulse" src="images/logo/logo_white_on_black_cropped_compressed.png">
+            <!--width="324" height="243"-->
         </div>
     </div>
     <script src="app.js"></script>
@@ -29,4 +31,5 @@
         </div>
     </div>
 </body>
+
 </html>
