--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
-<html>
+<html lang="de">
 
 <head>
-    <title>Narua</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Narua</title>
+
+    <!-- pinterest verification -->
     <meta name="p:domain_verify" content="fd6cc231a0c2ff0a21f16c2ff68968f8" />
+
+
     <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="splash-container" class="splash-container">
-        <div id="splash-content" class="center full-height fade-in">
-            <img class="splash-image pulse" src="images/logo/logo_white_on_black_cropped_compressed.png">
-            <!--width="324" height="243"-->
-        </div>
+        <img class="splash-image pulse" src="images/logo/logo_white_on_black_cropped_compressed.png">
     </div>
     <script src="app.js"></script>
-    <div id="main-content">
-        <div id="header">
-            <img id="header-logo" src="images/logo/logo_white_on_black_cropped_compressed.png">
-        </div>
-        <div id="content">
-            <img class="main-image" src="images/Produktbilder.jpg">
-        </div>
-        <div id="footer">
-            <div>
-                <a class="white-logo-font" href="impressum.html">Impressum</a>
-            </div>
-        </div>
-    </div>
+
+    <header class="logo">
+        <img src="images/logo/logo_white_on_black_cropped_compressed.png">
+    </header>
+
+    <main class="images">
+        <img class="main-image" src="images/Produktbilder.jpg">
+    </main>
+
+    <footer class="impressum-link">
+        <a class="white-logo-font" href="impressum.html">Impressum</a>
+    </footer>
 </body>
 
 </html>
