add more images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
     </header>
 
     <main class="images">
-        <img class="main-image" src="images/Produktbilder.jpg">
+        <div class="content">
+            <div class="amazon-link">
+                <a class="white-normal-font" href="https://www.amazon.de/dp/B0D9KZKYWX" target="_blank">Besuchen Sie uns
+                    auf Amazon</a>
+            </div>
+            <div class="gallery">
+                <!--img class="main-image" src="images/Produktbilder.jpg"-->
+                <img class="main-image" src="images/titlebild_neu_.jpg">
+                <img class="main-image" src="images/ai_gen_1.jpg">
+                <img class="main-image" src="images/ai_gen_2.jpg">
+            </div>
+        </div>
     </main>
 
     <footer class="impressum-link">
