--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
             </div>
             <div class="gallery">
                 <!--img class="main-image" src="images/Produktbilder.jpg"-->
-                <img class="main-image" src="images/titlebild_neu_.jpg">
-                <img class="main-image" src="images/ai_gen_1.jpg">
-                <img class="main-image" src="images/ai_gen_2.jpg">
+                <img class="main-image" src="images/titlebild_neu_.jpg"
+                    alt="Kopfhörerständer mit Holzbasis auf weißen Hintergrund. Front- und Rückansicht">
+                <img class="main-image" src="images/ai_gen_1.jpg"
+                    alt="Kopfhörerständer mit Holzbasis auf einem Schreibtisch">
+                <img class="main-image" src="images/ai_gen_2.jpg"
+                    alt="Kopfhörerständer mit Holzbasis auf dem Air Pods Max hängen">
             </div>
         </div>
     </main>
