add google analytics tag

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DF5F1XZ2QN"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DF5F1XZ2QN');
+</script>
+
 <body>
     <div id="splash-container" class="splash-container">
         <img class="splash-image pulse" src="images/logo/logo_white_on_black_cropped_compressed.png">
