add node js support

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="splash-container" class="splash-container">
         <img class="splash-image pulse" src="images/logo/logo_white_on_black_cropped_compressed.png">
     </div>
-    <script src="app.js"></script>
+    <script src="splash.js"></script>
 
     <header class="logo">
         <img src="images/logo/logo_white_on_black_cropped_compressed.png">
@@ -53,6 +53,7 @@
 
     <footer class="impressum-link">
         <a class="white-logo-font" href="impressum.html">Impressum</a>
+        <a class="white-logo-font" href="listingkeywords.html">Listing Keywords Tool</a>
     </footer>
 </body>
 
