--- a/impressum.html
+++ b/impressum.html
@@ -1,51 +1,56 @@
 <html>
-    <head>
-        <title>Narua</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="impressum.css">
-    </head>
-    <body>
-        <div id="impressum" class="impressum">
-            <div class="impressum-header white-bold-font">Impressum</div>
-            <div class="information">
-                <p class="information-header white-bold-font">Grajczyk & Meyer GbR</p>
-                <p class="text white-normal-font">
-                    Jannis Grajczyk <br>
-                    Tobias Meyer
-                </p>
-                <p class="text white-normal-font">
-                    Mühlenstraße 114 <br> 
-                    26789 Leer <br>
-                    Email:  <a href="mailto: contact@grajczyk-meyer.de">contact@grajczyk-meyer.de</a><br>
-                    Tel.: 0151-20067570 <br>
-                    Umsatzsteuer-Identifikationsnummer <br> 
-                    gemäß §27a UStG: DE366235764
-                </p>
-            </div>
-            <div class="information">
-                <p class="information-header white-bold-font">Inhaltlich verantwortlich gemäß §55 Abs. 2 RStV:</p>
-                <p class="text white-normal-font">
-                    Jannis Grajczyk; Tobias Meyer<br>
-                    Grajczyk & Meyer GbR <br>
-                    Mühlenstraße 114 <br> 
-                    26789 Leer <br>
-                </p>
-            </div>
-            <div class="information">
-                <p class="information-header white-bold-font">Online-Streitbeilegung</p>
-                <p class="text white-normal-font">
-                    Online-Streitbeilegung gemäß Art. 14 Abs. 1 ODR-VO: <br>
-                    Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, <br> 
-                    die Sie unter <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a> finden. <br>
-                    Wir sind zur Beilegung von Streitigkeiten mit Verbrauchern verpflichtet. 
-                    Verbraucher können sich hierzu an die folgende Verbraucherschlichtungsstelle wenden: <br>
-                    Allgemeine Verbraucherschlichtungsstelle des Zentrums für Schlichtung e.V., 
-                    Straßburger Str.8, 77694 Kehl, <a href=" www.verbraucher-schlichter.de">www.verbraucher-schlichter.de</a>
-                </p>
-            </div>
+
+<head>
+    <title>Narua</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="impressum.css">
+</head>
+
+<body>
+    <div id="impressum" class="impressum">
+        <div class="impressum-header white-bold-font">Impressum</div>
+        <div class="information">
+            <p class="information-header white-bold-font">Grajczyk & Meyer GbR</p>
+            <p class="text white-normal-font">
+                Jannis Grajczyk <br>
+                Tobias Meyer
+            </p>
+            <p class="text white-normal-font">
+                Mühlenstraße 114 <br>
+                26789 Leer <br>
+                Email: <a href="mailto: contact@grajczyk-meyer.de">contact@grajczyk-meyer.de</a><br>
+                Tel.: 0151-20067570 <br>
+                Umsatzsteuer-Identifikationsnummer <br>
+                gemäß §27a UStG: DE366235764
+            </p>
         </div>
-    </body>
+        <div class="information">
+            <p class="information-header white-bold-font">Inhaltlich verantwortlich gemäß §55 Abs. 2 RStV:</p>
+            <p class="text white-normal-font">
+                Jannis Grajczyk; Tobias Meyer<br>
+                Grajczyk & Meyer GbR <br>
+                Mühlenstraße 114 <br>
+                26789 Leer <br>
+            </p>
+        </div>
+        <div class="information">
+            <p class="information-header white-bold-font">Online-Streitbeilegung</p>
+            <p class="text white-normal-font">
+                Online-Streitbeilegung gemäß Art. 14 Abs. 1 ODR-VO: <br>
+                Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, <br>
+                die Sie unter <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a>
+                finden. <br>
+                Wir sind zur Beilegung von Streitigkeiten mit Verbrauchern verpflichtet.
+                Verbraucher können sich hierzu an die folgende Verbraucherschlichtungsstelle wenden: <br>
+                Allgemeine Verbraucherschlichtungsstelle des Zentrums für Schlichtung e.V.,
+                Straßburger Str.8, 77694 Kehl, <a
+                    href=" www.verbraucher-schlichter.de">www.verbraucher-schlichter.de</a>
+            </p>
+        </div>
+    </div>
+</body>
+
 </html>
