comment out new feature

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <footer class="impressum-link">
         <a class="white-logo-font" href="impressum.html">Impressum</a>
-        <a class="white-logo-font" href="listingkeywords.html">Listing Keywords Tool</a>
+        <!--a class="white-logo-font" href="listingkeywords.html">Listing Keywords Tool</a-->
     </footer>
 </body>
 
